Enhanced proeprtyRole management with SHUI namespace